--- a/Calculator.Pages/packages.config
+++ b/Calculator.Pages/packages.config
@@ -3,5 +3,12 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.2.0.725" targetFramework="net461" />
   <package id="Microsoft.Windows.Shell" version="3.0.1.0" targetFramework="net461" />
+  <package id="ReactiveProperty" version="3.2.0" targetFramework="net461" />
   <package id="Serilog" version="2.3.0" targetFramework="net461" />
+  <package id="System.Reactive" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Core" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Interfaces" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Linq" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.PlatformServices" version="3.0.0" targetFramework="net461" />
+  <package id="System.Reactive.Windows.Threading" version="3.0.0" targetFramework="net461" />
 </packages>
