--- a/Calculator.GestureRecognizer/packages.config
+++ b/Calculator.GestureRecognizer/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="ReactiveProperty" version="3.4.0" targetFramework="net461" />
+  <package id="Serilog" version="2.3.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
