refactoring to new project structure

--- a/Calculator.GestureRecognizer/Calculator.GestureRecognizer.csproj
+++ b/Calculator.GestureRecognizer/Calculator.GestureRecognizer.csproj
@@ -177,6 +177,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -187,6 +191,9 @@
       <Project>{81fce370-3f80-4ff7-adc9-14af74d77b96}</Project>
       <Name>Calculator.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
