--- a/Calculator.Pages/Calculator.Pages.csproj
+++ b/Calculator.Pages/Calculator.Pages.csproj
@@ -170,52 +170,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CharExtensions.cs" />
-    <Compile Include="GestureTrainingPage.xaml.cs">
-      <DependentUpon>GestureTrainingPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="GestureTrainingPageViewModel.cs" />
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="NavigateToMainCommand.cs" />
-    <Compile Include="NavigateToTrainCommand.cs" />
-    <Compile Include="PathSampleExtensions.cs" />
     <Compile Include="ShellWindow.xaml.cs">
       <DependentUpon>ShellWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="PathSampleViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StrokeCollectionExtensions.cs" />
-    <Compile Include="TrainingSetExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="MainPage.Dictionary.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Page>
     <Page Include="ShellWindow.Dictionary.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
       <DependentUpon>ShellWindow.xaml</DependentUpon>
     </Page>
-    <Page Include="GestureTrainingPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="MainPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="ShellWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="GestureTrainingPage.Dictionary.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-      <DependentUpon>GestureTrainingPage.xaml</DependentUpon>
     </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -227,21 +195,13 @@
       <Project>{81fce370-3f80-4ff7-adc9-14af74d77b96}</Project>
       <Name>Calculator.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Calculator.Controls\Calculator.Controls.csproj">
-      <Project>{edcaed3e-e410-48e4-b28c-b186c7f01251}</Project>
-      <Name>Calculator.Controls</Name>
+    <ProjectReference Include="..\Calculator.GestureTraining\Calculator.GestureTraining.csproj">
+      <Project>{753585C2-B934-44CC-9D6F-0C6093DB7ED7}</Project>
+      <Name>Calculator.GestureTraining</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Calculator.GestureRecognizer\Calculator.GestureRecognizer.csproj">
-      <Project>{65cd49cc-65f5-46b7-a0a4-fa386b6a46fe}</Project>
-      <Name>Calculator.GestureRecognizer</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Calculator.Keypad\Calculator.Keypad.csproj">
-      <Project>{20fe640a-a9a1-4759-9cd5-87402f2d9cd5}</Project>
-      <Name>Calculator.Keypad</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Calculator.Messages\Calculator.Messages.csproj">
-      <Project>{2708ae29-8665-4af1-8b70-a8badfd04600}</Project>
-      <Name>Calculator.Messages</Name>
+    <ProjectReference Include="..\Calculator.Main\Calculator.Main.csproj">
+      <Project>{6f8b388c-8679-4736-a360-52e4ec8af4d5}</Project>
+      <Name>Calculator.Main</Name>
     </ProjectReference>
     <ProjectReference Include="..\Calculator.Styling\Calculator.Styling.csproj">
       <Project>{bd4112dd-6462-4a9c-8ad3-3548c145421c}</Project>
